syntax = "proto3";

package api.product;

option go_package = "awsomestore/api/product;product";

service Product {
  rpc CreateProduct (CreateProductReq) returns (CreateProductResp);
  rpc ListProduct (ListProductReq) returns (ListProductResp);
}

message CreateProductReq {
  string title = 1;
  string desc = 2;
  repeated string keyword = 3;
  double price = 4;
  repeated string picture = 5;
}
message CreateProductResp {}

message ListProductReq {
  string keyword = 1;
}
message ListProductResp {
  repeated ProductInfo productList = 1;
}

message ProductInfo {
  string pid = 1;
  string title = 2;
  string desc = 3;
  double price = 4;
  repeated string picture = 5;
}